# plox

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  diary.md  profile.sh  report.md
plox/: Cargo.toml
plox-example/: Cargo.toml
plox-example/src/: frag.glsl  gpu.rs  main.rs  shader.rs  util.rs  vert.glsl
plox/src/: atlas.rs  font.rs  lib.rs  line.rs  polynomial.rs  shaping.rs  spline.rs  svg.rs  tesselate.rs
plox/src/gpu/: circle.frag.glsl  circle.rs  circle.vert.glsl  circle_fancy.frag.glsl  fill.frag.glsl  fill.vert.glsl  line.frag.glsl  line.vert.glsl  line_fancy.frag.glsl  mod.rs  outline.frag.glsl  outline.vert.glsl  sample.frag.glsl  sample.vert.glsl  shader.rs  text.rs  text.vert.glsl  textelement_fancy.frag.glsl  textelement_simple.frag.glsl  typeset.rs
presentation/: .gitignore  main.tex
