[package]
name = "plox-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plox = { path = "../plox" }
image = "0.24.1"
glutin = "0.28.0"
gl = "0.14.0"
lazy_static = "1.4.0"
nalgebra-glm = "0.3"
